--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <nav>
+    <header class="site-header">
+      <div class="container-header">
+        <nav class="main-navigation">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
-          <ul>
-            <li>
+          <ul class="ul-navigation">
+            <li class="li-navigation1">
               <a href="./index.html" class="navigation">Studio</a>
             </li>
-            <li>
+            <li class="li-navigation2">
               <a href="" class="navigation">Portfolio</a>
             </li>
-            <li>
+            <li class="li-navigation3">
               <a href="" class="navigation">Contacts</a>
             </li>
           </ul>
         </nav>
 
-        <address class="adress-nav">
-          <ul>
-            <li>
-              <a href="mailto:info@devstudio.com" class="adress-mailtel"
+        <address class="address-nav">
+          <ul class="ul-address">
+            <li class="li-address1">
+              <a href="mailto:info@devstudio.com" class="address-mailtel"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="tel:+110001111111" class="adress-mailtel"
+            <li class="li-address2">
+              <a href="tel:+110001111111" class="address-mailtel"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -63,29 +63,29 @@
       <section class="advantage">
         <div class="container">
           <h2 class="advantage-main">Advantages</h2>
-          <ul>
-            <li>
+          <ul class="ul-advantage">
+            <li class="li-advantage">
               <h3 class="advantage-titles">Strategy</h3>
               <p class="advantage-paragraphs">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="li-advantage">
               <h3 class="advantage-titles">Punctuality</h3>
               <p class="advantage-paragraphs">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="li-advantage">
               <h3 class="advantage-titles">Diligence</h3>
               <p class="advantage-paragraphs">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="li-advantage">
               <h3 class="advantage-titles">Technologies</h3>
               <p class="advantage-paragraphs">
                 Design practice focused on digital experiences. We bring forth a
@@ -98,8 +98,8 @@
       <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
-          <ul>
-            <li class="team-list">
+          <ul class="ul-team">
+            <li class="ul-team11">
               <img
                 src="./images/card1.jpg"
                 alt="Mark Guerrero, Product Designer"
@@ -108,7 +108,7 @@
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-profession">Product Designer</p>
             </li>
-            <li class="team-list">
+            <li class="ul-team2">
               <img
                 src="./images/card2.jpg"
                 alt="Tom Ford, Frontend Developer smiling"
@@ -117,7 +117,7 @@
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-profession">Frontend Developer</p>
             </li>
-            <li class="team-list">
+            <li class="ul-team3">
               <img
                 src="./images/card3.jpg"
                 alt="Camila Garcia, Marketing Specialist"
@@ -126,7 +126,7 @@
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-profession">Marketing</p>
             </li>
-            <li class="team-list">
+            <li class="ul-team4">
               <img
                 src="./images/card4.jpg"
                 alt="Daniel Wilson, UI Designer"
