--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         <nav class="main-navigation">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="ul-navigation">
-            <li class="li-navigation1">
+            <li class="li-navigation">
               <a href="./index.html" class="navigation">Studio</a>
             </li>
-            <li class="li-navigation2">
+            <li class="li-navigation">
               <a href="" class="navigation">Portfolio</a>
             </li>
-            <li class="li-navigation3">
+            <li class="li-navigation">
               <a href="" class="navigation">Contacts</a>
             </li>
           </ul>
