--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container-header">
+      <div class="container">
         <nav class="main-navigation">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="ul-navigation">
