--- a/index.html
+++ b/index.html
@@ -99,41 +99,49 @@
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="ul-team">
-            <li class="ul-team11">
+            <li class="li-team">
               <img
                 src="./images/card1.jpg"
                 alt="Mark Guerrero, Product Designer"
                 width="264"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-profession">Product Designer</p>
+              <div class="div-team">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-profession">Product Designer</p>
+              </div>
             </li>
-            <li class="ul-team2">
+            <li class="li-team">
               <img
                 src="./images/card2.jpg"
                 alt="Tom Ford, Frontend Developer smiling"
                 width="264"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-profession">Frontend Developer</p>
+              <div class="div-team">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-profession">Frontend Developer</p>
+              </div>
             </li>
-            <li class="ul-team3">
+            <li class="li-team">
               <img
                 src="./images/card3.jpg"
                 alt="Camila Garcia, Marketing Specialist"
                 width="264"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-profession">Marketing</p>
+              <div class="div-team">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-profession">Marketing</p>
+              </div>
             </li>
-            <li class="ul-team4">
+            <li class="li-team">
               <img
                 src="./images/card4.jpg"
                 alt="Daniel Wilson, UI Designer"
                 width="264"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-profession">UI Designer</p>
+              <div class="div-team">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-profession">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
