--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul>
+          <ul class="ul-portfolio">
             <li class="portfolio-list">
               <img
                 src="./images/portf1.jpg"
@@ -158,8 +158,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Banking App</h3>
-              <p class="portfolio-paragraphs">App</p>
+              <div class="div-portfolio">
+                <h3 class="portfolio-name">Banking App</h3>
+                <p class="portfolio-paragraphs">App</p>
+              </div>
             </li>
             <li class="portfolio-list">
               <img
@@ -168,8 +170,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Cashless Payment</h3>
-              <p class="portfolio-paragraphs">Marketing</p>
+              <div class="div-portfolio">
+                <h3 class="portfolio-name">Cashless Payment</h3>
+                <p class="portfolio-paragraphs">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list">
               <img
@@ -178,8 +182,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Meditation App</h3>
-              <p class="portfolio-paragraphs">App</p>
+              <div class="div-portfolio">
+                <h3 class="portfolio-name">Meditation App</h3>
+                <p class="portfolio-paragraphs">App</p>
+              </div>
             </li>
             <li class="portfolio-list">
               <img
@@ -188,8 +194,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Taxi Service</h3>
-              <p class="portfolio-paragraphs">Marketing</p>
+              <div class="div-portfolio">
+                <h3 class="portfolio-name">Taxi Service</h3>
+                <p class="portfolio-paragraphs">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list">
               <img
@@ -198,8 +206,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Screen Illustrations</h3>
-              <p class="portfolio-paragraphs">Design</p>
+              <div class="div-portfolio">
+                <h3 class="portfolio-name">Screen Illustrations</h3>
+                <p class="portfolio-paragraphs">Design</p>
+              </div>
             </li>
             <li class="portfolio-list">
               <img
@@ -208,8 +218,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Online Courses</h3>
-              <p class="portfolio-paragraphs">Marketing</p>
+              <div class="div-portfolio">
+                <h3 class="portfolio-name">Online Courses</h3>
+                <p class="portfolio-paragraphs">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
