--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container">
+      <div class="container-header">
         <nav class="main-navigation">
           <a href="./index.html" class="logo">Web<span>Studio</span></a>
           <ul class="ul-navigation">
@@ -228,7 +228,7 @@
       </section>
     </main>
     <footer class="footer-content">
-      <div class="container">
+      <div class="container-footer">
         <a href="./index.html" class="footer-logo"
           >Web<span class="footer-logo-span">Studio</span></a
         >
