--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-button">Order Service</button>
+          <div class="cent">
+            <h1 class="main-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="main-button">Order Service</button>
+          </div>
         </div>
       </section>
       <section class="advantage">
@@ -97,133 +99,137 @@
       </section>
       <section class="team">
         <div class="container">
-          <h2 class="team-title">Our Team</h2>
-          <ul class="ul-team">
-            <li class="li-team">
-              <img
-                src="./images/card1.jpg"
-                alt="Mark Guerrero, Product Designer"
-                width="264"
-              />
-              <div class="div-team">
-                <h3 class="team-name">Mark Guerrero</h3>
-                <p class="team-profession">Product Designer</p>
-              </div>
-            </li>
-            <li class="li-team">
-              <img
-                src="./images/card2.jpg"
-                alt="Tom Ford, Frontend Developer smiling"
-                width="264"
-              />
-              <div class="div-team">
-                <h3 class="team-name">Tom Ford</h3>
-                <p class="team-profession">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="li-team">
-              <img
-                src="./images/card3.jpg"
-                alt="Camila Garcia, Marketing Specialist"
-                width="264"
-              />
-              <div class="div-team">
-                <h3 class="team-name">Camila Garcia</h3>
-                <p class="team-profession">Marketing</p>
-              </div>
-            </li>
-            <li class="li-team">
-              <img
-                src="./images/card4.jpg"
-                alt="Daniel Wilson, UI Designer"
-                width="264"
-              />
-              <div class="div-team">
-                <h3 class="team-name">Daniel Wilson</h3>
-                <p class="team-profession">UI Designer</p>
-              </div>
-            </li>
-          </ul>
+          <div class="cent">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="ul-team">
+              <li class="li-team">
+                <img
+                  src="./images/card1.jpg"
+                  alt="Mark Guerrero, Product Designer"
+                  width="264"
+                />
+                <div class="div-team">
+                  <h3 class="team-name">Mark Guerrero</h3>
+                  <p class="team-profession">Product Designer</p>
+                </div>
+              </li>
+              <li class="li-team">
+                <img
+                  src="./images/card2.jpg"
+                  alt="Tom Ford, Frontend Developer smiling"
+                  width="264"
+                />
+                <div class="div-team">
+                  <h3 class="team-name">Tom Ford</h3>
+                  <p class="team-profession">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="li-team">
+                <img
+                  src="./images/card3.jpg"
+                  alt="Camila Garcia, Marketing Specialist"
+                  width="264"
+                />
+                <div class="div-team">
+                  <h3 class="team-name">Camila Garcia</h3>
+                  <p class="team-profession">Marketing</p>
+                </div>
+              </li>
+              <li class="li-team">
+                <img
+                  src="./images/card4.jpg"
+                  alt="Daniel Wilson, UI Designer"
+                  width="264"
+                />
+                <div class="div-team">
+                  <h3 class="team-name">Daniel Wilson</h3>
+                  <p class="team-profession">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <section class="portfolio">
         <div class="container">
-          <h2 class="portfolio-title">Our Portfolio</h2>
-          <ul class="ul-portfolio">
-            <li class="portfolio-list">
-              <img
-                src="./images/portf1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <div class="div-portfolio">
-                <h3 class="portfolio-name">Banking App</h3>
-                <p class="portfolio-paragraphs">App</p>
-              </div>
-            </li>
-            <li class="portfolio-list">
-              <img
-                src="./images/portf2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <div class="div-portfolio">
-                <h3 class="portfolio-name">Cashless Payment</h3>
-                <p class="portfolio-paragraphs">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio-list">
-              <img
-                src="./images/portf3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <div class="div-portfolio">
-                <h3 class="portfolio-name">Meditation App</h3>
-                <p class="portfolio-paragraphs">App</p>
-              </div>
-            </li>
-            <li class="portfolio-list">
-              <img
-                src="./images/portf4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <div class="div-portfolio">
-                <h3 class="portfolio-name">Taxi Service</h3>
-                <p class="portfolio-paragraphs">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio-list">
-              <img
-                src="./images/portf5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="div-portfolio">
-                <h3 class="portfolio-name">Screen Illustrations</h3>
-                <p class="portfolio-paragraphs">Design</p>
-              </div>
-            </li>
-            <li class="portfolio-list">
-              <img
-                src="./images/portf6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="div-portfolio">
-                <h3 class="portfolio-name">Online Courses</h3>
-                <p class="portfolio-paragraphs">Marketing</p>
-              </div>
-            </li>
-          </ul>
+          <div class="cent">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="ul-portfolio">
+              <li class="portfolio-list">
+                <img
+                  src="./images/portf1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="div-portfolio">
+                  <h3 class="portfolio-name">Banking App</h3>
+                  <p class="portfolio-paragraphs">App</p>
+                </div>
+              </li>
+              <li class="portfolio-list">
+                <img
+                  src="./images/portf2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="div-portfolio">
+                  <h3 class="portfolio-name">Cashless Payment</h3>
+                  <p class="portfolio-paragraphs">Marketing</p>
+                </div>
+              </li>
+              <li class="portfolio-list">
+                <img
+                  src="./images/portf3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="div-portfolio">
+                  <h3 class="portfolio-name">Meditation App</h3>
+                  <p class="portfolio-paragraphs">App</p>
+                </div>
+              </li>
+              <li class="portfolio-list">
+                <img
+                  src="./images/portf4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="div-portfolio">
+                  <h3 class="portfolio-name">Taxi Service</h3>
+                  <p class="portfolio-paragraphs">Marketing</p>
+                </div>
+              </li>
+              <li class="portfolio-list">
+                <img
+                  src="./images/portf5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="div-portfolio">
+                  <h3 class="portfolio-name">Screen Illustrations</h3>
+                  <p class="portfolio-paragraphs">Design</p>
+                </div>
+              </li>
+              <li class="portfolio-list">
+                <img
+                  src="./images/portf6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="div-portfolio">
+                  <h3 class="portfolio-name">Online Courses</h3>
+                  <p class="portfolio-paragraphs">Marketing</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
