--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="WebStudio" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link
@@ -17,79 +17,83 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+      integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header class="site-header">
-      <div class="container">
-        <nav class="main-navigation">
-          <a href="./index.html" class="logo">Web<span>Studio</span></a>
-          <ul class="ul-navigation">
-            <li class="li-navigation">
-              <a href="./index.html" class="navigation">Studio</a>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-container-nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-span">Web</span>Studio</a
+          >
+          <ul class="header-container-nav-ul">
+            <li class="nav-list">
+              <a href="#" class="nav-list-a">Studio</a>
             </li>
-            <li class="li-navigation">
-              <a href="" class="navigation">Portfolio</a>
+            <li class="nav-list">
+              <a href="#" class="nav-list-a">Portfolio</a>
             </li>
-            <li class="li-navigation">
-              <a href="" class="navigation">Contacts</a>
+            <li class="nav-list">
+              <a href="#" class="nav-list-a">Contacts</a>
             </li>
           </ul>
         </nav>
-
-        <address class="address-nav">
-          <ul class="ul-address">
-            <li class="li-address1">
-              <a href="mailto:info@devstudio.com" class="address-mailtel"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="li-address2">
-              <a href="tel:+110001111111" class="address-mailtel"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
+        <address class="header-container-address">
+          <ul class="header-container-address-ul">
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
       </div>
     </header>
     <main>
-      <section class="hero">
-        <div class="container">
-          <div class="cent">
-            <h1 class="main-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="main-button">Order Service</button>
-          </div>
+      <section class="solutions">
+        <div class="container solutions-container">
+          <h1 class="first-header">Effective Solutions for Your Business</h1>
+          <button type="button" class="solutions-button">Order Service</button>
         </div>
       </section>
       <section class="advantage">
         <div class="container">
-          <h2 class="advantage-main">Advantages</h2>
-          <ul class="ul-advantage">
-            <li class="li-advantage">
-              <h3 class="advantage-titles">Strategy</h3>
-              <p class="advantage-paragraphs">
+          <h2 class="visually-hidden">Feature</h2>
+          <ul class="advantage-container">
+            <li class="advantage-li">
+              <h3 class="third-header">Strategy</h3>
+              <p class="main-page">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="li-advantage">
-              <h3 class="advantage-titles">Punctuality</h3>
-              <p class="advantage-paragraphs">
+            <li class="advantage-li">
+              <h3 class="third-header">Punctuality</h3>
+              <p class="main-page">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="li-advantage">
-              <h3 class="advantage-titles">Diligence</h3>
-              <p class="advantage-paragraphs">
+            <li class="advantage-li">
+              <h3 class="third-header">Diligence</h3>
+              <p class="main-page">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li class="li-advantage">
-              <h3 class="advantage-titles">Technologies</h3>
-              <p class="advantage-paragraphs">
+            <li class="advantage-li">
+              <h3 class="third-header">Technologies</h3>
+              <p class="main-page">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
@@ -97,148 +101,147 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="team team-sec">
         <div class="container">
-          <div class="cent">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="ul-team">
-              <li class="li-team">
-                <img
-                  src="./images/card1.jpg"
-                  alt="Mark Guerrero, Product Designer"
-                  width="264"
-                />
-                <div class="div-team">
-                  <h3 class="team-name">Mark Guerrero</h3>
-                  <p class="team-profession">Product Designer</p>
-                </div>
-              </li>
-              <li class="li-team">
-                <img
-                  src="./images/card2.jpg"
-                  alt="Tom Ford, Frontend Developer smiling"
-                  width="264"
-                />
-                <div class="div-team">
-                  <h3 class="team-name">Tom Ford</h3>
-                  <p class="team-profession">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="li-team">
-                <img
-                  src="./images/card3.jpg"
-                  alt="Camila Garcia, Marketing Specialist"
-                  width="264"
-                />
-                <div class="div-team">
-                  <h3 class="team-name">Camila Garcia</h3>
-                  <p class="team-profession">Marketing</p>
-                </div>
-              </li>
-              <li class="li-team">
-                <img
-                  src="./images/card4.jpg"
-                  alt="Daniel Wilson, UI Designer"
-                  width="264"
-                />
-                <div class="div-team">
-                  <h3 class="team-name">Daniel Wilson</h3>
-                  <p class="team-profession">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-members">
+            <li class="team-members-li">
+              <img
+                src="./images/card1.jpg"
+                width="264"
+                height="260"
+                alt="Mark Guerrero"
+              />
+              <div class="members-name">
+                <h3 class="team-main-title">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img
+                src="./images/card2.jpg"
+                width="264"
+                height="260"
+                alt="Tom Ford"
+              />
+              <div class="members-name">
+                <h3 class="team-main-title">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-members-li">
+              <img
+                src="./images/card3.jpg"
+                width="264"
+                height="260"
+                alt="Camila Garcia"
+              />
+              <div class="members-name">
+                <h3 class="team-main-title">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-members-li">
+              <img
+                src="./images/card4.jpg"
+                width="264"
+                height="260"
+                alt="Daniel Wilson"
+              />
+              <div class="members-name">
+                <h3 class="team-main-title">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
-
       <section class="portfolio">
         <div class="container">
-          <div class="cent">
-            <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul class="ul-portfolio">
-              <li class="portfolio-list">
-                <img
-                  src="./images/portf1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-                <div class="div-portfolio">
-                  <h3 class="portfolio-name">Banking App</h3>
-                  <p class="portfolio-paragraphs">App</p>
-                </div>
-              </li>
-              <li class="portfolio-list">
-                <img
-                  src="./images/portf2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <div class="div-portfolio">
-                  <h3 class="portfolio-name">Cashless Payment</h3>
-                  <p class="portfolio-paragraphs">Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-list">
-                <img
-                  src="./images/portf3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
-                <div class="div-portfolio">
-                  <h3 class="portfolio-name">Meditation App</h3>
-                  <p class="portfolio-paragraphs">App</p>
-                </div>
-              </li>
-              <li class="portfolio-list">
-                <img
-                  src="./images/portf4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                <div class="div-portfolio">
-                  <h3 class="portfolio-name">Taxi Service</h3>
-                  <p class="portfolio-paragraphs">Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-list">
-                <img
-                  src="./images/portf5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                <div class="div-portfolio">
-                  <h3 class="portfolio-name">Screen Illustrations</h3>
-                  <p class="portfolio-paragraphs">Design</p>
-                </div>
-              </li>
-              <li class="portfolio-list">
-                <img
-                  src="./images/portf6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                <div class="div-portfolio">
-                  <h3 class="portfolio-name">Online Courses</h3>
-                  <p class="portfolio-paragraphs">Marketing</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-li">
+              <img
+                src="./images/portf1.jpg"
+                width="360"
+                height="300"
+                alt="Banking App"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-main-title">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-li">
+              <img
+                src="./images/portf2.jpg"
+                width="360"
+                height="300"
+                alt="Cashless Payment"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-main-title">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-li">
+              <img
+                src="./images/portf3.jpg"
+                width="360"
+                height="300"
+                alt="Meditation App"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-main-title">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-list-li">
+              <img
+                src="./images/portf4.jpg"
+                width="360"
+                height="300"
+                alt="Taxi Service"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-main-title">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-list-li">
+              <img
+                src="./images/portf5.jpg"
+                width="360"
+                height="300"
+                alt="Screen Illustrations"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-main-title">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-list-li">
+              <img
+                src="./images/portf6.jpg"
+                width="360"
+                height="300"
+                alt="Online Courses"
+              />
+              <div class="portfolio-name">
+                <h3 class="portfolio-main-title">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
-    <footer class="footer-content">
+    <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="footer-logo-span">Studio</span></a
+        <a href="./index.html" class="footer-link"
+          ><span class="logo-span-footer">Web</span>Studio</a
         >
-        <p class="footer-paragraph">
+        <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
