--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-members">
-            <li class="team-members-li">
+            <li class="team-li">
               <img
                 src="./images/card1.jpg"
                 width="264"
@@ -129,7 +129,7 @@
                 <p class="team-text">Frontend Developer</p>
               </div>
             </li>
-            <li class="team-members-li">
+            <li class="team-li">
               <img
                 src="./images/card3.jpg"
                 width="264"
@@ -141,7 +141,7 @@
                 <p class="team-text">Marketing</p>
               </div>
             </li>
-            <li class="team-members-li">
+            <li class="team-li">
               <img
                 src="./images/card4.jpg"
                 width="264"
