--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
           <h2 class="visually-hidden">Feature</h2>
           <ul class="advantage-container">
             <li class="advantage-li">
+              <div class="advantage-icon-container">
+                <svg width="64" height="64" class="advantage-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Strategy</h3>
               <p class="main-page">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +83,11 @@
               </p>
             </li>
             <li class="advantage-li">
+              <div class="advantage-icon-container">
+                <svg width="64" height="64" class="advantage-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Punctuality</h3>
               <p class="main-page">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +95,11 @@
               </p>
             </li>
             <li class="advantage-li">
+              <div class="advantage-icon-container">
+                <svg width="64" height="64" class="advantage-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Diligence</h3>
               <p class="main-page">
                 Research and confirm brands with the strongest digital growth
@@ -92,6 +107,11 @@
               </p>
             </li>
             <li class="advantage-li">
+              <div class="advantage-icon-container">
+                <svg width="64" height="64" class="advantage-icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="third-header">Technologies</h3>
               <p class="main-page">
                 Design practice focused on digital experiences. We bring forth a
@@ -116,6 +136,36 @@
                 <h3 class="team-main-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
+              <ul class="card-social-list">
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-li">
               <img
@@ -128,6 +178,36 @@
                 <h3 class="team-main-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
+              <ul class="card-social-list">
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-li">
               <img
@@ -140,6 +220,36 @@
                 <h3 class="team-main-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
+              <ul class="card-social-list">
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-li">
               <img
@@ -152,6 +262,36 @@
                 <h3 class="team-main-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
+              <ul class="card-social-list">
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="card-social-item">
+                  <a href="" class="card-social-link"
+                    ><svg class="card-social-svg" width="16" height="16">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
